Change OSB use of HttpClient to URL/URLConnection for consistency with rest of Vespucci code.